Change log for gfsm

v0.0.9 Mon, 05 Nov 2007 12:00:03 +0100
   + added shell tool gfsmindex, source files gfsmIndexed.[ch], gfsmIndexedIO.[ch]
     - the "right way" to do this would be to go for a truly abstract automaton API,
       but the price (virtualization, extraneous flag & limit checking, etc.) is daunting
   + changed static int<->pointer casts to GPOINTER_TO_(U)INT, G(U)INT_TO_POINTER
   + fixed gfsmWeight-related segfault bugs on 64-bit linux
     - gfsm_weight2ptr() and gfsm_ptr2weight() are now implemented as true functions
       using a "hidden" union type gfsmWeightOrPointer to handle memory stuff
     - this happily also allows gcc to compile without -fno-strict-aliasing
   + fixed bug reported by Alexis Nasr in gfsm_pointer_alphabet_new() macro 
   + fixed nasty bug in gfsm_alphabet_load_handle() and gfsmio_getc() causing
     char decimal 255 to return as EOF
   + re-implemented gfsm_automaton_compose() using implicit Mohri-Pereira-Riley filter
   + fixed output-filename parsing bug in gfsmlabels
   + added check for fsm->states->len==0 in is_cyclic(), fixes bug in gfsminfo
     for empty automata created with gfsm_automaton_copy_shallow() (aka 'shadow')
     - the real problem here is probably that copy_shallow() also copies root_id, even
       though the corresponding state doesn't exist
   + added gfsmArcIter copy() and clone() methods

v0.0.9-pre? Mon, 29 Oct 2007 12:54:19 +0100
   + exposed guts of gfsm_automaton_compose()
     - compose_prepare() into compose_old_prepare_fsm1(), compose_old_prepare_fsm2()
     - should make it easier to hack a cascade implementation

v0.0.8 Thu, 15 Feb 2007 12:05:41 +0100
   + updated build system to build more cleanly on non-development systems
     - e.g. missing optgen.perl, flex, bison, pod2x, perl, etc.
   + added gfsm.magic snippet for /etc/magic
     - added 'install-magic' and 'uninstall-magic' targets for
       manual magic maintainance, since there seems to be no good and safe